--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,22 +3,30 @@ name: Deploy Flask App to EC2
 on:
   push:
     branches:
-      - main
+      - main  # Trigger the workflow on push to main branch
 
 jobs:
   deploy:
+    name: Deploy to EC2
     runs-on: ubuntu-latest
 
     steps:
-    - name: SSH into EC2 and deploy
-  uses: appleboy/ssh-action@v1.0.0
-  with:
-    host: ${{ secrets.EC2_HOST }}
-    username: ubuntu
-    key: ${{ secrets.EC2_SSH_KEY }}
-    port: 22
-    script: |
-      cd /home/ubuntu/crud-app
-      git pull origin main
-      sudo systemctl restart flaskapp
+      - name: Checkout code
+        uses: actions/checkout@v4
 
+      - name: Set up SSH key
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.EC2_KEY }}
+
+      - name: SSH into EC2 and deploy
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_KEY }}
+          port: 22
+          script: |
+            cd /home/ubuntu/crud-app
+            git pull origin main
+            sudo systemctl restart flaskapp
